chore: resolve dependabot alerts

--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
 		"vsce": "^1.75.0"
 	},
 	"resolutions": {
-		"**/**/lodash": "^4.17.19"
+		"**/**/lodash": "^4.17.19",
+		"**/**/dot-prop": "^4.2.1",
+		"**/**/ini": "^1.3.6",
+		"**/**/y18n": "^4.0.1"
 	},
 	"standard-version": {
 		"types": [
