--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
 		"**/**/y18n": "^4.0.1"
 	},
 	"standard-version": {
+		"skip": {
+			"changelog": true
+		},
 		"types": [
 			{
 				"type": "feat",
