--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,7 +10,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
-            - uses: lannonbr/vsce-action@master
+            - uses: lannonbr/vsce-action@3.0.0
               with:
                   args: "publish -p $VSCE_TOKEN"
               env:
