--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "karma",
 	"displayName": "Karma",
 	"description": "A colorful VS Code theme",
-	"version": "3.0.0",
+	"version": "3.0.0-beta2",
 	"publisher": "sreetamd",
 	"author": "Sreetam Das",
 	"license": "MIT",
