--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "karma",
+	"name": "@sreetamdas/karma",
 	"displayName": "Karma",
 	"description": "A colorful VS Code theme",
 	"version": "3.0.0",
@@ -49,7 +49,6 @@
 	},
 	"devDependencies": {
 		"@types/node": "^18.7.14",
-		"tsup": "^6.2.3",
 		"tsx": "^3.9.0",
 		"typescript": "^4.8.2",
 		"vsce": "^2.11.0"
