chore: update package name, fix `.vscodeignore`

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,10 +1,15 @@
-.vscode/**
-.vscode-test/**
+.vscode/
+.vscode-test/
 .gitignore
+.npmignore
 .changeset/
 .github/
-/node_modules/
-/pnpm-lock.yaml
-/src/
-/build/
+node_modules/
+src/
+build/
+test/
 vsc-extension-quickstart.md
+CHANGELOG.md
+tsconfig.json
+images/
+!images/logo.png
