--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "@sreetamdas/karma",
 	"displayName": "Karma",
 	"description": "A colorful VS Code theme",
-	"version": "3.1.0",
+	"version": "3.1.1-beta.0",
 	"publisher": "sreetamd",
 	"author": "Sreetam Das",
 	"license": "MIT",
