--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name": "@sreetamdas/karma",
+	"name": "karma",
 	"displayName": "Karma",
 	"description": "A colorful VS Code theme",
-	"version": "3.1.1-beta.1",
+	"version": "3.1.1",
 	"publisher": "sreetamd",
 	"author": "Sreetam Das",
 	"license": "MIT",
